--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "com.ripple.lasagu"
-        minSdkVersion 15
+        minSdkVersion 11
         targetSdkVersion 23
-        versionCode 2
-        versionName "0.9.1"
+        versionCode 3
+        versionName "0.9.2"
     }
     buildTypes {
         release {
@@ -26,7 +26,9 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project(':BaseGameUtils')
+//    compile project(':BaseGameUtils')
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.android.gms:play-services:9.0.0'
+    compile "com.android.support:support-v4:23.4.0"
+    compile "com.google.android.gms:play-services-games:9.0.0"
+    compile "com.google.android.gms:play-services-plus:9.0.0"
 }
