--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.ripple.lasagu"
+        applicationId "com.ripple.lasagu1"
         minSdkVersion 11
         targetSdkVersion 23
-        versionCode 3
-        versionName "0.9.2"
+        versionCode 1
+        versionName "0.9.1"
     }
     buildTypes {
         release {
@@ -29,6 +29,5 @@ dependencies {
 //    compile project(':BaseGameUtils')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile "com.android.support:support-v4:23.4.0"
-    compile "com.google.android.gms:play-services-games:9.0.0"
-    compile "com.google.android.gms:play-services-plus:9.0.0"
+    compile "com.google.android.gms:play-services:9.0.0"
 }
